update log path

--- a/.github/workflows/build_pipeline.yml
+++ b/.github/workflows/build_pipeline.yml
@@ -90,8 +90,8 @@ jobs:
         with:
           name: logs
           path: |
-            **/CMakeOutput.log
-            **/CMakeError.log
-            **/stdout.log
-            **/stderr.log
-            **/bootstrap.log
+            ${{ github.workspace }}/**/CMakeOutput.log
+            ${{ github.workspace }}/**/CMakeError.log
+            ${{ github.workspace }}/**/stdout.log
+            ${{ github.workspace }}/**/stderr.log
+            ${{ github.workspace }}/**/bootstrap.log
