--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,25 +1,25 @@
-trigger:
-- master
-pr:
-- master
-schedules:
-- cron: "0 0 * * *"
-  displayName: Nightly build
-  branches:
-    include:
-    - master
+# trigger:
+# - master
+# pr:
+# - master
+# schedules:
+# - cron: "0 0 * * *"
+#   displayName: Nightly build
+#   branches:
+#     include:
+#     - master
 
 variables:
   BUILD_TYPE: "RelWithDebInfo"
 
 jobs:
-- job: Commit_checker
-  pool:
-    vmImage: 'ubuntu-18.04'
-  condition: eq(variables['Build.Reason'], 'PullRequest')
-  steps:
-    - bash: scripts/misc/commit_checker.sh
-      displayName: 'Commit checker script'
+# - job: Commit_checker
+#   pool:
+#     vmImage: 'ubuntu-18.04'
+#   condition: eq(variables['Build.Reason'], 'PullRequest')
+#   steps:
+#     - bash: scripts/misc/commit_checker.sh
+#       displayName: 'Commit checker script'
 - job: Windows_build
   pool:
     vmImage: 'vs2017-win2016'
