--- a/.github/workflows/build_pipeline.yml
+++ b/.github/workflows/build_pipeline.yml
@@ -32,57 +32,61 @@ jobs:
         with:
           submodules: true
 
-      - uses: lukka/get-cmake@latest
-      - name: dir
-        run: find $RUNNER_WORKSPACE
+      - name: build
+        run: ./scripts/windows/build.sh
         shell: bash
-      - name: Restore artifacts, or run vcpkg, build and cache artifacts
-        uses: lukka/run-vcpkg@main
-        id: runvcpkg
-        with:
-          vcpkgArguments: '${{ matrix.vcpkgPackages }}'
-          vcpkgTriplet: '${{ matrix.triplet }}'
-          vcpkgDirectory: '${{ runner.workspace }}/b/vcpkg'
-          vcpkgGitCommitId: '${{ matrix.vcpkgCommitId }}'
-      - name: dir
-        run: find $RUNNER_WORKSPACE
-        shell: bash
-      - name: Prints outputs of run-vcpkg task
-        run: echo "'${{ steps.runvcpkg.outputs.RUNVCPKG_VCPKG_ROOT_OUT }}' '${{  steps.runvcpkg.outputs.RUNVCPKG_VCPKG_TRIPLET_OUT }}' "
-      - name: Run CMake+Ninja without triplet
-        uses: lukka/run-cmake@main
-        id: runcmake
-        with:
-          cmakeGenerator: 'Ninja'  
-          cmakeListsOrSettingsJson: 'CMakeListsTxtBasic'
-          cmakeListsTxtPath: '${{ github.workspace }}/CMakeLists.txt'
-          useVcpkgToolchainFile: true
-          buildWithCMakeArgs: '-- -v'
-          buildDirectory: '${{ runner.workspace }}/b/ninja/'
-      - name: Run CMake+Ninja with triplet (cmd)
-        uses: lukka/run-cmake@main
-        id: runcmake_cmd
-        with:
-          cmakeGenerator: 'Ninja'  
-          cmakeListsOrSettingsJson: 'CMakeListsTxtBasic'
-          cmakeListsTxtPath: '${{ github.workspace }}/CMakeLists.txt'
-          useVcpkgToolchainFile: true
-          buildWithCMakeArgs: '-- -v'
-          vcpkgTriplet: ${{ steps.runvcpkg.outputs.RUNVCPKG_VCPKG_TRIPLET_OUT }}
-          buildDirectory: '${{ runner.workspace }}/b/ninja/'
-      - name: Run CMake+Ninja with triplet (bash)
-        if: false
-        uses: lukka/run-cmake@main
-        id: runcmake_bash
-        with:
-          cmakeGenerator: 'Ninja'  
-          cmakeListsOrSettingsJson: 'CMakeListsTxtBasic'
-          cmakeListsTxtPath: '${{ github.workspace }}/CMakeLists.txt'
-          useVcpkgToolchainFile: true
-          buildWithCMakeArgs: '-- -v'
-          vcpkgTriplet: ${{ steps.runvcpkg.outputs.RUNVCPKG_VCPKG_TRIPLET_OUT }}
-          buildDirectory: '${{ runner.workspace }}/b/ninja-bash/'
-          useShell: bash
+        
+#       - uses: lukka/get-cmake@latest
+#       - name: dir
+#         run: find $RUNNER_WORKSPACE
+#         shell: bash
+#       - name: Restore artifacts, or run vcpkg, build and cache artifacts
+#         uses: lukka/run-vcpkg@main
+#         id: runvcpkg
+#         with:
+#           vcpkgArguments: '${{ matrix.vcpkgPackages }}'
+#           vcpkgTriplet: '${{ matrix.triplet }}'
+#           vcpkgDirectory: '${{ runner.workspace }}/b/vcpkg'
+#           vcpkgGitCommitId: '${{ matrix.vcpkgCommitId }}'
+#       - name: dir
+#         run: find $RUNNER_WORKSPACE
+#         shell: bash
+#       - name: Prints outputs of run-vcpkg task
+#         run: echo "'${{ steps.runvcpkg.outputs.RUNVCPKG_VCPKG_ROOT_OUT }}' '${{  steps.runvcpkg.outputs.RUNVCPKG_VCPKG_TRIPLET_OUT }}' "
+#       - name: Run CMake+Ninja without triplet
+#         uses: lukka/run-cmake@main
+#         id: runcmake
+#         with:
+#           cmakeGenerator: 'Ninja'  
+#           cmakeListsOrSettingsJson: 'CMakeListsTxtBasic'
+#           cmakeListsTxtPath: '${{ github.workspace }}/CMakeLists.txt'
+#           useVcpkgToolchainFile: true
+#           buildWithCMakeArgs: '-- -v'
+#           buildDirectory: '${{ runner.workspace }}/b/ninja/'
+#       - name: Run CMake+Ninja with triplet (cmd)
+#         uses: lukka/run-cmake@main
+#         id: runcmake_cmd
+#         with:
+#           cmakeGenerator: 'Ninja'  
+#           cmakeListsOrSettingsJson: 'CMakeListsTxtBasic'
+#           cmakeListsTxtPath: '${{ github.workspace }}/CMakeLists.txt'
+#           useVcpkgToolchainFile: true
+#           buildWithCMakeArgs: '-- -v'
+#           vcpkgTriplet: ${{ steps.runvcpkg.outputs.RUNVCPKG_VCPKG_TRIPLET_OUT }}
+#           buildDirectory: '${{ runner.workspace }}/b/ninja/'
+#       - name: Run CMake+Ninja with triplet (bash)
+#         if: false
+#         uses: lukka/run-cmake@main
+#         id: runcmake_bash
+#         with:
+#           cmakeGenerator: 'Ninja'  
+#           cmakeListsOrSettingsJson: 'CMakeListsTxtBasic'
+#           cmakeListsTxtPath: '${{ github.workspace }}/CMakeLists.txt'
+#           useVcpkgToolchainFile: true
+#           buildWithCMakeArgs: '-- -v'
+#           vcpkgTriplet: ${{ steps.runvcpkg.outputs.RUNVCPKG_VCPKG_TRIPLET_OUT }}
+#           buildDirectory: '${{ runner.workspace }}/b/ninja-bash/'
+#           useShell: bash
       
       - name: Archive logs
         if: ${{ always() }}
