--- a/.github/workflows/build_pipeline.yml
+++ b/.github/workflows/build_pipeline.yml
@@ -12,9 +12,9 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
+        os: [ubuntu-latest, macos-latest, windows-2016]
         include:
-          - os: windows-latest
+          - os: windows-2016
             triplet: x64-windows
             vcpkgCommitId: '30124253eecff36bc90f73341edbfb4f845e2a1e'
             vcpkgPackages: 'sqlite3'
@@ -32,7 +32,9 @@ jobs:
       - uses: actions/checkout@v1
         with:
           submodules: true
-
+      - name: show_env
+        run: echo $VS150COMNTOOLS
+        shell: bash
       - name: build
         run: ./scripts/windows/build.sh
         shell: bash
