--- a/.github/workflows/build_pipeline.yml
+++ b/.github/workflows/build_pipeline.yml
@@ -6,94 +6,7 @@ on:
       - build
 
 jobs:
-#   job:
-#     env:
-#       BUILD_TYPE: "RelWithDebInfo"
-#     name: ${{ matrix.os }}-build
-#     runs-on: ${{ matrix.os }}
-#     strategy:
-#       fail-fast: false
-#       matrix:
-#         os: [ubuntu-latest, macos-latest, windows-2016]
-#         include:
-#           - os: windows-2016
-#             triplet: x64-windows
-#             vcpkgCommitId: '30124253eecff36bc90f73341edbfb4f845e2a1e'
-#             vcpkgPackages: 'sqlite3'
-#             VS150COMNTOOLS: "C:\\Program Files (x86)\\Microsoft Visual Studio\\2017\\Enterprise"
-#           - os: ubuntu-latest
-#             triplet: x64-linux
-#             vcpkgCommitId: '30124253eecff36bc90f73341edbfb4f845e2a1e'
-#             vcpkgPackages: 'sqlite3'
-#           - os: macos-latest
-#             triplet: x64-osx
-#             vcpkgCommitId: '30124253eecff36bc90f73341edbfb4f845e2a1e'
-#             vcpkgPackages: 'sqlite3'
-
-#     steps:
-#       - uses: actions/checkout@v1
-#         with:
-#           submodules: true
-#       - name: show_env
-#         run: echo VS150COMNTOOLS=$VS150COMNTOOLS
-#         shell: bash
-#       - name: build
-#         run: ./scripts/windows/build.sh
-#         shell: bash
-        
-#       - uses: lukka/get-cmake@latest
-#       - name: dir
-#         run: find $RUNNER_WORKSPACE
-#         shell: bash
-#       - name: Restore artifacts, or run vcpkg, build and cache artifacts
-#         uses: lukka/run-vcpkg@main
-#         id: runvcpkg
-#         with:
-#           vcpkgArguments: '${{ matrix.vcpkgPackages }}'
-#           vcpkgTriplet: '${{ matrix.triplet }}'
-#           vcpkgDirectory: '${{ runner.workspace }}/b/vcpkg'
-#           vcpkgGitCommitId: '${{ matrix.vcpkgCommitId }}'
-#       - name: dir
-#         run: find $RUNNER_WORKSPACE
-#         shell: bash
-#       - name: Prints outputs of run-vcpkg task
-#         run: echo "'${{ steps.runvcpkg.outputs.RUNVCPKG_VCPKG_ROOT_OUT }}' '${{  steps.runvcpkg.outputs.RUNVCPKG_VCPKG_TRIPLET_OUT }}' "
-#       - name: Run CMake+Ninja without triplet
-#         uses: lukka/run-cmake@main
-#         id: runcmake
-#         with:
-#           cmakeGenerator: 'Ninja'  
-#           cmakeListsOrSettingsJson: 'CMakeListsTxtBasic'
-#           cmakeListsTxtPath: '${{ github.workspace }}/CMakeLists.txt'
-#           useVcpkgToolchainFile: true
-#           buildWithCMakeArgs: '-- -v'
-#           buildDirectory: '${{ runner.workspace }}/b/ninja/'
-#       - name: Run CMake+Ninja with triplet (cmd)
-#         uses: lukka/run-cmake@main
-#         id: runcmake_cmd
-#         with:
-#           cmakeGenerator: 'Ninja'  
-#           cmakeListsOrSettingsJson: 'CMakeListsTxtBasic'
-#           cmakeListsTxtPath: '${{ github.workspace }}/CMakeLists.txt'
-#           useVcpkgToolchainFile: true
-#           buildWithCMakeArgs: '-- -v'
-#           vcpkgTriplet: ${{ steps.runvcpkg.outputs.RUNVCPKG_VCPKG_TRIPLET_OUT }}
-#           buildDirectory: '${{ runner.workspace }}/b/ninja/'
-#       - name: Run CMake+Ninja with triplet (bash)
-#         if: false
-#         uses: lukka/run-cmake@main
-#         id: runcmake_bash
-#         with:
-#           cmakeGenerator: 'Ninja'  
-#           cmakeListsOrSettingsJson: 'CMakeListsTxtBasic'
-#           cmakeListsTxtPath: '${{ github.workspace }}/CMakeLists.txt'
-#           useVcpkgToolchainFile: true
-#           buildWithCMakeArgs: '-- -v'
-#           vcpkgTriplet: ${{ steps.runvcpkg.outputs.RUNVCPKG_VCPKG_TRIPLET_OUT }}
-#           buildDirectory: '${{ runner.workspace }}/b/ninja-bash/'
-#           useShell: bash
-      
-  job2:
+  job:
     env:
       BUILD_TYPE: "RelWithDebInfo"
     runs-on: windows-latest
@@ -104,15 +17,15 @@ jobs:
       - uses: ilammy/msvc-dev-cmd@v1
         with:
           arch: x64
+      - name: vs
+        run: vcvarsall.bat x64
       - name: show_env
         run: echo VS150COMNTOOLS=$VS150COMNTOOLS
         shell: bash
       - name: build
         run: ./scripts/windows/build.sh
         shell: bash
-        
-        
-        
+  
       - name: Archive build artifacts
         uses: actions/upload-artifact@v2
         with:
