runs on windows 2016

--- a/.github/workflows/build_pipeline.yml
+++ b/.github/workflows/build_pipeline.yml
@@ -9,7 +9,7 @@ jobs:
   job:
     env:
       BUILD_TYPE: "RelWithDebInfo"
-    runs-on: windows-latest
+    runs-on: windows-2016
     steps:
       - uses: actions/checkout@v1
         with:
