--- a/.github/workflows/build_pipeline.yml
+++ b/.github/workflows/build_pipeline.yml
@@ -30,7 +30,8 @@ jobs:
           mkdir build && cd build
           cmake .. -G "Visual Studio 15 2017 Win64" \
                   -DCMAKE_BUILD_TYPE=$BUILD_TYPE \
-                  -DBUILD_SHARED_LIBS=ON
+                  -DBUILD_SHARED_LIBS=ON \
+                  -DOLP_SDK_ENABLE_TESTING=OFF
           cmake --build . --config $BUILD_TYPE
         shell: bash
   
